--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_gray">#A9A9A9</color>
+    <color name="gray">#A9A9A9</color>
+    <color name="light_gray">#D3D3D3</color>
+
 </resources>
